update: pages, cards and forms

--- a/src/views/SignUp/index.html
+++ b/src/views/SignUp/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Page</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../../style.css" />
 </head>
 <body class="flex items-center justify-center h-screen bg-gray-200">
     <section class="w-full max-w-md">
-        <form id="signup-form" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" aria-label="Signup Form">
+        <form id="signup-form" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" >
             <fieldset>
                 <legend class="text-xl font-bold mb-4">Signup</legend>
 
