--- a/src/views/Login/index.html
+++ b/src/views/Login/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../../style.css" />
 </head>
 <body class="flex items-center justify-center h-screen bg-gray-200">
     <section class="w-full max-w-xs">
