--- a/src/views/UserLayout/index.html
+++ b/src/views/UserLayout/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Dashboard</title>
+    <link rel="stylesheet" href="../../../style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-gray-100 box-border">
-    <main class="main flex flex-col md:flex-row h-lvh">
-
+  <body class="box-border font-custom">
+    <main class="main flex flex-col md:flex-row h-lvh relative">
       <!----------------------- Sidebar ---------------------------->
-      <div class="sidebar bg-white w-full md:w-1/4 lg:w-1/6 m-5 p-5 border-r">
-        <div class="userRole flex items-center space-x-2 mb-5">
+      <section
+        id="sidebar"
+        class="bg-primary w-full md:w-1/4 lg:w-1/6 m-5 p-5 border-r rounded-xl flex flex-col gap-2 sticky"
+      >
+        <div id="userRole" class="userRole flex items-center space-x-2 mb-5">
           <div
             class="rounded-full h-10 w-10 flex items-center justify-center bg-gray-200 text-lg font-semibold"
           >
@@ -19,33 +22,95 @@
           </div>
           <div id="fullname" class="font-medium">
             John Doe<br />
-            <span class="text-sm text-gray-600">Doctor</span>
+            <span class="text-sm text-gray-600">User</span>
           </div>
         </div>
-        <nav class="userRights py-10 ">
-          <ul class="flex flex-col gap-40">
-            <li class="mb-3">
+        <nav id="userRights" class="userRights py-10">
+          <ul class="flex flex-col gap-6">
+            <li class="mb-3 flex gap-2 items-center">
+              <svg
+                height="24"
+                viewBox="0 0 24 24"
+                width="24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M4 13h6a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1zm-1 7a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1v-4a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v4zm10 0a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1v-7a1 1 0 0 0-1-1h-6a1 1 0 0 0-1 1v7zm1-10h6a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1h-6a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1z"
+                  fill="#000000"
+                />
+              </svg>
               <a
                 href="#"
-                class="text-gray-700 hover:text-gray-900 transition duration-150 ease-in-out"
-                >Home</a
+                class="text-gray-700 text-xl hover:text-gray-900 transition duration-150 ease-in-out"
+                >Dashboard</a
               >
             </li>
-            <li class="mb-3">
+            <li class="mb-3 flex gap-2 text-xl items-center">
+              <svg
+                height="24"
+                width="24"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <title />
+                <path
+                  d="M18,4H17V3a1,1,0,0,0-2,0V4H9V3A1,1,0,0,0,7,3V4H6A3,3,0,0,0,3,7V18a3,3,0,0,0,3,3H18a3,3,0,0,0,3-3V7A3,3,0,0,0,18,4ZM8,18a1,1,0,1,1,1-1A1,1,0,0,1,8,18Zm0-4a1,1,0,1,1,1-1A1,1,0,0,1,8,14Zm4,4a1,1,0,1,1,1-1A1,1,0,0,1,12,18Zm0-4a1,1,0,1,1,1-1A1,1,0,0,1,12,14Zm4,0a1,1,0,1,1,1-1A1,1,0,0,1,16,14Zm3-4H5V7A1,1,0,0,1,6,6H7V7A1,1,0,0,0,9,7V6h6V7a1,1,0,0,0,2,0V6h1a1,1,0,0,1,1,1Z"
+                  fill="#000000"
+                />
+              </svg>
               <a
                 href="#"
                 class="text-gray-700 hover:text-gray-900 transition duration-150 ease-in-out"
                 >Appointment</a
               >
             </li>
-            <li class="mb-3">
+            <li class="mb-3 flex gap-2 text-xl items-center">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 512 512"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <title />
+                <g id="Stethoscope">
+                  <path
+                    d="M416.6226,147.9609a58.6358,58.6358,0,1,0,58.6357,58.6348A58.6354,58.6354,0,0,0,416.6226,147.9609Zm-.001,85.2676a26.6367,26.6367,0,1,1,26.6367-26.6328A26.6636,26.6636,0,0,1,416.6216,233.2285Z"
+                  />
+                  <path
+                    d="M401.1353,287.7227v55.1152A105.1841,105.1841,0,0,1,296.0728,447.9063c-55.6778,0-101.9766-44.3672-104.8467-99.625,69.3095-7.879,123.0693-67.6973,123.0713-137.8008V65.127a15.5055,15.5055,0,0,0-15.4883-15.4883h-34.166a32,32,0,1,0-.001,30.9746h18.6836V210.4805a107.8062,107.8062,0,1,1-215.6123,0V80.6133H86.397a32,32,0,1,0-.002-30.9746H52.229A15.5052,15.5052,0,0,0,36.7417,65.127V210.4805c.001,70.2754,53.96,130.1543,123.4834,137.8437,2.916,72.3047,63.1367,130.5508,135.8477,130.5508,75.0078,0,136.0341-61.0234,136.0341-136.0371V287.7227a80.3817,80.3817,0,0,1-30.9716,0Z"
+                    fill="#000000"
+                  />
+                </g>
+              </svg>
               <a
                 href="#"
                 class="text-gray-700 hover:text-gray-900 transition duration-150 ease-in-out"
                 >Apply Doctor</a
               >
             </li>
-            <li class="mb-3">
+            <li id="logout" class="logout mb-3 flex gap-2 text-xl items-center">
+              <svg
+                fill="none"
+                height="24"
+                viewBox="0 0 24 24"
+                width="24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M15 3H7C5.89543 3 5 3.89543 5 5V19C5 20.1046 5.89543 21 7 21H15"
+                  stroke="black"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                />
+                <path
+                  d="M19 12L15 8M19 12L15 16M19 12H9"
+                  stroke="black"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                />
+              </svg>
               <a
                 href="#"
                 class="text-gray-700 hover:text-gray-900 transition duration-150 ease-in-out"
@@ -53,21 +118,192 @@
               >
             </li>
           </ul>
+          
         </nav>
-      </div>
+      </section>
 
       <!----------------------- Except Sidebar ---------------------------->
-      <div class="exceptSidebar flex-1 p-5">
-        <div class="bg-white p-6 rounded shadow-sm">
-          <!-- Profile Header -->
-          <div class="border-b pb-3 mb-5">
+      <section id="exceptSidebar" class="flex w-full flex-col p-5 gap-2">
+        <div class="bg-primary p-6 rounded-xl shadow-sm">
+          
+          <div class="flex items-center justify-between">
+            <p>Welcome! John</p>
             <h1 class="text-lg font-semibold">Profile</h1>
           </div>
-          <!-- Profile Content -->
-          <!-- Add your content here -->
         </div>
-      </div>
+        <!-------------------------- Dashboard Doctor Cards  --------------------->
+        <div
+          id="doctor-cards"
+          class="flex justify-between gap-6 flex-wrap bg-white rounded-xl p-6"
+        >
+          <div
+            id="doctor-card"
+            class="w-[340px] bg-slate-200 rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300 ease-in-out"
+          >
+            <div class="flex items-center p-4">
+              <img
+                class="rounded-full border-2 border-gray-300 h-24 w-24"
+                src="../../assets/doctors/dr-khusbu.jpg"
+                alt="Doctor profile picture"
+              />
+              <div class="ml-4">
+                <h3 class="text-lg font-semibold text-gray-900">
+                  Dr. Khusbu Khetan
+                </h3>
+                <span class="text-gray-600">Dentist</span>
+                <span class="text-gray-600">|</span>
+                <span class="text-gray-600">5+ years</span>
+                <p class="text-gray-600">M.B.B.S., M.D.</p>
+                <!-- <p class="text-gray-900">Rs. 500 per Visit</p> -->
+              </div>
+            </div>
+            <div
+              class="flex justify-center items-center text-white bg-primary hover:bg-blue-200 m-4 text-sm font-semibold px-6 py-2 rounded-lg cursor-pointer"
+            >
+              Make Appointment
+            </div>
+          </div>
+          <div
+            id="doctor-card"
+            class="w-[340px] bg-slate-200 rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300 ease-in-out"
+          >
+            <div class="flex items-center p-4">
+              <img
+                class="rounded-full border-2 border-gray-300 h-24 w-24"
+                src="../../assets/doctors/dr-khusbu.jpg"
+                alt="Doctor profile picture"
+              />
+              <div class="ml-4">
+                <h3 class="text-lg font-semibold text-gray-900">
+                  Dr. Khusbu Khetan
+                </h3>
+                <span class="text-gray-600">Dentist</span>
+                <span class="text-gray-600">|</span>
+                <span class="text-gray-600">5+ years</span>
+                <p class="text-gray-600">M.B.B.S., M.D.</p>
+                <!-- <p class="text-gray-900">Rs. 500 per Visit</p> -->
+              </div>
+            </div>
+            <div
+              class="flex justify-center items-center text-white bg-primary hover:bg-blue-200 m-4 text-sm font-semibold px-6 py-2 rounded-lg cursor-pointer"
+            >
+              Make Appointment
+            </div>
+          </div>
+          <div
+            id="doctor-card"
+            class="w-[340px] bg-slate-200 rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300 ease-in-out"
+          >
+            <div class="flex items-center p-4">
+              <img
+                class="rounded-full border-2 border-gray-300 h-24 w-24"
+                src="../../assets/doctors/dr-khusbu.jpg"
+                alt="Doctor profile picture"
+              />
+              <div class="ml-4">
+                <h3 class="text-lg font-semibold text-gray-900">
+                  Dr. Khusbu Khetan
+                </h3>
+                <span class="text-gray-600">Dentist</span>
+                <span class="text-gray-600">|</span>
+                <span class="text-gray-600">5+ years</span>
+                <p class="text-gray-600">M.B.B.S., M.D.</p>
+                <!-- <p class="text-gray-900">Rs. 500 per Visit</p> -->
+              </div>
+            </div>
+            <div
+              class="flex justify-center items-center text-white bg-primary hover:bg-blue-200 m-4 text-sm font-semibold px-6 py-2 rounded-lg cursor-pointer"
+            >
+              Make Appointment
+            </div>
+          </div>
+
+          <div
+            id="doctor-card"
+            class="w-[340px] bg-slate-200 rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300 ease-in-out"
+          >
+            <div class="flex items-center p-4">
+              <img
+                class="rounded-full border-2 border-gray-300 h-24 w-24"
+                src="../../assets/doctors/dr-khusbu.jpg"
+                alt="Doctor profile picture"
+              />
+              <div class="ml-4">
+                <h3 class="text-lg font-semibold text-gray-900">
+                  Dr. Khusbu Khetan
+                </h3>
+                <span class="text-gray-600">Dentist</span>
+                <span class="text-gray-600">|</span>
+                <span class="text-gray-600">5+ years</span>
+                <p class="text-gray-600">M.B.B.S., M.D.</p>
+                <!-- <p class="text-gray-900">Rs. 500 per Visit</p> -->
+              </div>
+            </div>
+            <div
+              class="flex justify-center items-center text-white bg-primary hover:bg-blue-200 m-4 text-sm font-semibold px-6 py-2 rounded-lg cursor-pointer"
+            >
+              Make Appointment
+            </div>
+          </div>
+
+          <div
+            id="doctor-card"
+            class="w-[340px] bg-slate-200 rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300 ease-in-out"
+          >
+            <div class="flex items-center p-4">
+              <img
+                class="rounded-full border-2 border-gray-300 h-24 w-24"
+                src="../../assets/doctors/dr-khusbu.jpg"
+                alt="Doctor profile picture"
+              />
+              <div class="ml-4">
+                <h3 class="text-lg font-semibold text-gray-900">
+                  Dr. Khusbu Khetan
+                </h3>
+                <span class="text-gray-600">Dentist</span>
+                <span class="text-gray-600">|</span>
+                <span class="text-gray-600">5+ years</span>
+                <p class="text-gray-600">M.B.B.S., M.D.</p>
+                <!-- <p class="text-gray-900">Rs. 500 per Visit</p> -->
+              </div>
+            </div>
+            <div
+              class="flex justify-center items-center text-white bg-primary hover:bg-blue-200 m-4 text-sm font-semibold px-6 py-2 rounded-lg cursor-pointer"
+            >
+              Make Appointment
+            </div>
+          </div>
+
+          <div
+            id="doctor-card"
+            class="w-[340px] bg-slate-200 rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300 ease-in-out"
+          >
+            <div class="flex items-center p-4">
+              <img
+                class="rounded-full border-2 border-gray-300 h-24 w-24"
+                src="../../assets/doctors/dr-khusbu.jpg"
+                alt="Doctor profile picture"
+              />
+              <div class="ml-4">
+                <h3 class="text-lg font-semibold text-gray-900">
+                  Dr. Khusbu Khetan
+                </h3>
+                <span class="text-gray-600">Dentist</span>
+                <span class="text-gray-600">|</span>
+                <span class="text-gray-600">5+ years</span>
+                <p class="text-gray-600">M.B.B.S., M.D.</p>
+                <!-- <p class="text-gray-900">Rs. 500 per Visit</p> -->
+              </div>
+            </div>
+            <div
+              class="flex justify-center items-center text-white bg-primary hover:bg-blue-200 m-4 text-sm font-semibold px-6 py-2 rounded-lg cursor-pointer"
+            >
+              Make Appointment
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <script src="./script.ts"></script>
+    <script type="module" src="./script.ts"></script>
   </body>
 </html>
