--- a/src/views/DoctorCard/index.html
+++ b/src/views/DoctorCard/index.html
@@ -17,28 +17,31 @@
 
     <title>Doctor Card</title>
   </head>
-  <body class="box-border font-custom " >
+  <body  class="box-border font-custom">
     <div
-      id="doctor-card" class="max-w-sm bg-slate-200 rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300 ease-in-out"
+      id="doctor-card"
+      class="max-w-sm bg-slate-200 rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300 ease-in-out"
     >
       <div class="flex items-center p-4">
         <img
+          id="doctor-image"
           class="rounded-full border-2 border-gray-300 h-24 w-24"
           src="../../assets/doctors/dr-khusbu.jpg"
           alt="Doctor profile picture"
         />
         <div class="ml-4">
-          <h3 class="text-lg font-semibold text-gray-900">Dr. Khusbu Khetan</h3>
-          <span class="text-gray-600">Dentist</span>
+          <h3 id="doctor-name" class="text-lg font-semibold text-gray-900">
+            Dr. Khusbu Khetan
+          </h3>
+          <span id="speciality" class="text-gray-600">Dentist</span>
           <span class="text-gray-600">|</span>
-          <span class="text-gray-600">5+ years</span>
-          <p class="text-gray-600">M.B.B.S., M.D.</p>
+          <span id="experience" class="text-gray-600">5+ years</span>
+          <p id="education" class="text-gray-600">M.B.B.S., M.D.</p>
           <!-- <p class="text-gray-900">Rs. 500 per Visit</p> -->
-
-
         </div>
       </div>
       <div
+        id="make-appointment"
         class="flex justify-center items-center text-white bg-primary hover:bg-blue-200 m-4 text-sm font-semibold px-6 py-2 rounded-lg cursor-pointer"
       >
         Make Appointment
