add: dynamic forms

--- a/src/views/UserLayout/index.html
+++ b/src/views/UserLayout/index.html
@@ -20,9 +20,10 @@
           >
             JD
           </div>
-          <div id="fullname" class="font-medium">
-            John Doe<br />
-            <span id="userRole" class="text-sm text-gray-600"></span>
+          <div class="font-medium text-gray-600">
+            <span id="fullname" class="text-lg"></span>
+            <br />
+            <span id="userRole" class="text-sm "></span>
           </div>
         </div>
         <nav id="userRights" class="userRights py-10">
