--- a/src/views/SignUp/index.html
+++ b/src/views/SignUp/index.html
@@ -22,11 +22,11 @@
                     <label class="block text-gray-700 text-sm font-bold mb-2">Gender</label>
                     <div class="mt-2">
                         <label class="inline-flex items-center">
-                            <input type="radio" name="gender" value="male" class="form-radio">
+                            <input type="radio" name="gender" value="MALE" class="form-radio">
                             <span class="ml-2">Male</span>
                         </label>
                         <label class="inline-flex items-center ml-6">
-                            <input type="radio" name="gender" value="female" class="form-radio">
+                            <input type="radio" name="gender" value="FEMALE" class="form-radio">
                             <span class="ml-2">Female</span>
                         </label>
                     </div>
